<resources>
    <string name="app_name">in宁理</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Tools</string>
    <string name="title_notifications">Personal</string>
    <string name="main_title_backfround">background</string>
    <string name="main_system_title">我\t的\t宁\t理</string>
    <string name="main_username">用户名</string>
    <string name="main_password">密码</string>
    <string name="main_remeberPassword">记住密码</string>
    <string name="main_login_btn">登 录</string>
    <string name="system_background">background</string>
    <string name="second_welcome">欢迎进入教务管理系统</string>
    <string name="second_classTable">课表查询</string>
    <string name="second_score">成绩查询</string>
    <string name="score_year">学年</string>
    <string name="score_semester">学期</string>
    <string name="score_btn_semester">学期</string>
    <string name="score_btn_year">学年</string>
    <string name="score_btn_history">所有</string>
    <string name="class_title">课\t程\t表</string>
    <string name="examination_arrangement">考\t试\t安\t排</string>
</resources>